welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:21: error: not found: value getHauteurTerrain
    if (getY() > getHauteurTerrain() - 1)
                 ^